--- a/alpine-dev.yaml
+++ b/alpine-dev.yaml
@@ -7,6 +7,7 @@ contents:
 
   packages:
     - bash
+    - bash-completion
     - coreutils
     - curl
     - emacs
@@ -24,6 +25,8 @@ contents:
     - wget
     - yq
     - zsh
+    - zsh-completions
+    - zsh-syntax-highlighting
 
 work-dir: /home/dev
 
